--- a/src/app/componentes/material-editar/material-editar.component.html
+++ b/src/app/componentes/material-editar/material-editar.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <div>
-    <mat-checkbox [(ngModel)]="material.EstaComprado">Comprado</mat-checkbox>
+    <mat-checkbox [(ngModel)]="material.EstaAdquirido">Adquirido</mat-checkbox>
   </div>
 
   <div class="botones-confirmar">
