--- a/src/app/componentes/menu/menu.component.css
+++ b/src/app/componentes/menu/menu.component.css
@@ -1,4 +1,4 @@
-.menu {
+/* .menu {
     padding: 15px 0px 40px 0px;
     background-color: wheat;
     font-size: 20px;
@@ -53,4 +53,4 @@ a:hover {
 
 .left {
     float: left;
-}
+} */
