--- a/src/app/componentes/app/app.component.html
+++ b/src/app/componentes/app/app.component.html
@@ -1,4 +1,4 @@
 <app-menu></app-menu>
-<div class="container">
-    <router-outlet class="margen-general"></router-outlet>
+<div class="container margen-general">
+    <router-outlet></router-outlet>
 </div>
