--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,5 +1,4 @@
-
-<nav class="menu">
+<!-- <nav class="menu">
   <a class="left" style="color:green" routerLink="/">OBRAPP</a>  
   <a class="left" routerLink="/trabajos">Mis trabajos</a>
   <a class="left" routerLink="/materiales">Mis materiales</a>
@@ -10,4 +9,36 @@
     <span *ngIf="!usuario">Iniciar sesión</span>
     <span *ngIf="usuario">{{usuario.Nombre}}</span>
   </a>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="/">Obrapp</a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/trabajos">Trabajos</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/pagos">Pagos</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/materiales">Materiales</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/contratistas">Contratistas</a>
+      </li>
+    </ul>
+  </div>
 </nav>
+
+
