--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-
-pre{
+pre {
     padding: 20px;
     border-color: red;
     border-style: solid;
     border-width: 5px;
     background: darkblue;
     color: whitesmoke;
-    box-shadow: 0px 0px 30px -2px rgba(0,0,0,0.75);
-} 
+    box-shadow: 0px 0px 30px -2px rgba(0, 0, 0, 0.75);
+}
 
 button.tabla-boton {
     margin-right: 10px;
@@ -67,7 +66,7 @@ table.ancho-completo {
     width: 100%;
 }
 
-button.boton{
+button.boton {
     margin: 5px 15px 5px 0px;
 }
 
@@ -78,15 +77,26 @@ button.boton{
     box-shadow: 0px 0px 43px -15px rgba(0, 0, 0, 0.75);
 }
 
-.botones-confirmar{
+.botones-confirmar {
     margin: 15px 0px;
 }
 
 .detalle-ficha-item {
-    margin: 10px;
+    margin: 15px 5px;
 }
 
-.texto-pequeno{
+.texto-pequeno {
     color: grey;
     font-size: 12px;
+}
+
+.precios-totales {
+    margin: 10px;
+    padding: 13px;
+    border: 0.5px solid lightgrey;
+    background-color: rgb(245, 255, 245);
+    border-radius: 5px;
+    text-align: right;
+    font-weight: bold;
+    float: right;
 }
